--- a/labuenavida/movile-sdk.properties
+++ b/labuenavida/movile-sdk.properties
@@ -1,3 +1,8 @@
 atlasws.url=http://atlasws.ti.movile.com:9996
 atlasws.sendmessage.timeout=180
 atlasws.timeout=180
+
+########## cHUB ###########
+chub.connecttimeout=30
+chub.timeout=30
+chub.readtimeout=30
