--- a/properties/movile-sdk.properties
+++ b/properties/movile-sdk.properties
@@ -7,3 +7,8 @@ sbs.url=http://sbs.ti.movile.com:2509
 sbs.readtimeout=200
 sbs.connecttimeout=200
 sbs.timeout=200
+
+########## cHUB ###########
+chub.connecttimeout=30
+chub.timeout=30
+chub.readtimeout=30
