Obtener todos los videos.

--- a/properties/application.properties
+++ b/properties/application.properties
@@ -3,3 +3,5 @@ atlas_url=http://atlasws.ti.movile.com:9996/atlas/
 sbs.application.id=1068
 sbs.reference.id=100000
 sbs.carrier.id=23
+
+chub.application.id=1039
